--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,27 +9,15 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7"> Popbitch Safari</th></tr>
-<tr><td><a href="#t0">Signup_from_FUN</a></td><td class="num">2</td><td class="num">0</td><td class="num attn">4</td><td class="num">146</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Signup_from_FUN</a></td><td class="num">1</td><td class="num">0</td><td class="num attn">4</td><td class="num">155</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4"> Popbitch Safari</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Signup_from_FUN &#8212; failed</th></tr><tr class="failedeven"><td rowspan="4">Stepdef.Popbitch.POPSMO11_Axate_lets_user_select_their_country</td><td><a href="#m0">country_in_the_personal_information_page_in_the_account_page_is_spain</a></td><td rowspan="1">1576170145994</td><td rowspan="1">1</td></tr><tr class="failedeven"><td><a href="#m1">enter_valid_card_details</a></td><td rowspan="1">1576170145925</td><td rowspan="1">62</td></tr><tr class="failedeven"><td><a href="#m2">i_am_a_user_of_Axate_and_I_am_on_the_registration_page_through_popbitch_FUN</a></td><td rowspan="1">1576170145870</td><td rowspan="1">42</td></tr><tr class="failedeven"><td><a href="#m3">i_select_country_as_spain_from_the_drop_down_on_reg_page_two</a></td><td rowspan="1">1576170145989</td><td rowspan="1">3</td></tr><tr><th colspan="4">Signup_from_FUN &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">Stepdef.Popbitch.POPSMO11_Axate_lets_user_select_their_country</td><td><a href="#m4">i_click_on_one_pound_on_regpage_two</a></td><td rowspan="1">1576170145923</td><td rowspan="1">1</td></tr><tr class="passedeven"><td><a href="#m5">i_enter_all_the_required_details_on_step_one_and_click_on_continue</a></td><td rowspan="1">1576170145916</td><td rowspan="1">5</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4"> Popbitch Safari</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Signup_from_FUN &#8212; failed</th></tr><tr class="failedeven"><td rowspan="4">Stepdef.Popbitch.POPSMO10_Popbitch_Sucessful_user_registration_with_an_empty_wallet_on_skipping_payment</td><td><a href="#m0">an_ADD_funds_notice_is_displayed</a></td><td rowspan="1">1576506971427</td><td rowspan="1">1</td></tr><tr class="failedeven"><td><a href="#m1">i_am_a_user_of_Axate_and_I_am_on_the_registration_page_through_popbitch_FUN</a></td><td rowspan="1">1576506971295</td><td rowspan="1">43</td></tr><tr class="failedeven"><td><a href="#m2">i_get_an_unfunded_axate_wallet_with_zero_pounds_in_it</a></td><td rowspan="1">1576506971422</td><td rowspan="1">2</td></tr><tr class="failedeven"><td><a href="#m3">i_skip_the_payment_and_navigating_to_a_premium_article_on_popbitch</a></td><td rowspan="1">1576506971349</td><td rowspan="1">71</td></tr><tr><th colspan="4">Signup_from_FUN &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Stepdef.Popbitch.POPSMO10_Popbitch_Sucessful_user_registration_with_an_empty_wallet_on_skipping_payment</td><td><a href="#m4">i_enter_all_the_required_details_on_step_one_and_click_on_continue</a></td><td rowspan="1">1576506971342</td><td rowspan="1">5</td></tr></tbody>
 </table>
-<h2>Signup_from_FUN</h2><h3 id="m0">Stepdef.Popbitch.POPSMO11_Axate_lets_user_select_their_country#country_in_the_personal_information_page_in_the_account_page_is_spain</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
-	at java.util.Objects.requireNonNull(Objects.java:203)
-	at org.openqa.selenium.support.ui.FluentWait.&lt;init&gt;(FluentWait.java:106)
-	at org.openqa.selenium.support.ui.WebDriverWait.&lt;init&gt;(WebDriverWait.java:85)
-	at org.openqa.selenium.support.ui.WebDriverWait.&lt;init&gt;(WebDriverWait.java:45)
-	at Elements.Wallet_Elements.Click_On_popbitch_staging_agate_poster(Wallet_Elements.java:36)
-	at Stepdef.Popbitch.POPSMO11_Axate_lets_user_select_their_country.country_in_the_personal_information_page_in_the_account_page_is_spain(POPSMO11_Axate_lets_user_select_their_country.java:134)
+<h2>Signup_from_FUN</h2><h3 id="m0">Stepdef.Popbitch.POPSMO10_Popbitch_Sucessful_user_registration_with_an_empty_wallet_on_skipping_payment#an_ADD_funds_notice_is_displayed</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
+	at Elements.Add_Funds_Notice.Add_funds_notice_displayed(Add_Funds_Notice.java:32)
+	at Stepdef.Popbitch.POPSMO10_Popbitch_Sucessful_user_registration_with_an_empty_wallet_on_skipping_payment.an_ADD_funds_notice_is_displayed(POPSMO10_Popbitch_Sucessful_user_registration_with_an_empty_wallet_on_skipping_payment.java:136)
 ... Removed 25 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">Stepdef.Popbitch.POPSMO11_Axate_lets_user_select_their_country#enter_valid_card_details</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
-	at java.util.Objects.requireNonNull(Objects.java:203)
-	at org.openqa.selenium.support.ui.FluentWait.&lt;init&gt;(FluentWait.java:106)
-	at org.openqa.selenium.support.ui.WebDriverWait.&lt;init&gt;(WebDriverWait.java:85)
-	at org.openqa.selenium.support.ui.WebDriverWait.&lt;init&gt;(WebDriverWait.java:45)
-	at Elements.Register_Page_Elements1.Registration_Step2_without_continue(Register_Page_Elements1.java:118)
-	at Stepdef.Popbitch.POPSMO11_Axate_lets_user_select_their_country.enter_valid_card_details(POPSMO11_Axate_lets_user_select_their_country.java:116)
-... Removed 25 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">Stepdef.Popbitch.POPSMO11_Axate_lets_user_select_their_country#i_am_a_user_of_Axate_and_I_am_on_the_registration_page_through_popbitch_FUN</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>chrome</td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.IllegalStateException: The driver executable does not exist: /Users/jay/eclipse-workspace/Smoke_test_Cases_Live/C:/Users/Administrator/Desktop/chromedriver.exe
+<h3 id="m1">Stepdef.Popbitch.POPSMO10_Popbitch_Sucessful_user_registration_with_an_empty_wallet_on_skipping_payment#i_am_a_user_of_Axate_and_I_am_on_the_registration_page_through_popbitch_FUN</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>chrome</td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.IllegalStateException: The driver executable does not exist: /Users/jay/eclipse-workspace/Smoke_test_Cases_Live/C:/Users/Administrator/Desktop/chromedriver.exe
 	at com.google.common.base.Preconditions.checkState(Preconditions.java:585)
 	at org.openqa.selenium.remote.service.DriverService.checkExecutable(DriverService.java:146)
 	at org.openqa.selenium.remote.service.DriverService.findExecutable(DriverService.java:141)
@@ -38,13 +26,23 @@
 	at org.openqa.selenium.remote.service.DriverService$Builder.build(DriverService.java:355)
 	at org.openqa.selenium.chrome.ChromeDriverService.createDefaultService(ChromeDriverService.java:94)
 	at org.openqa.selenium.chrome.ChromeDriver.&lt;init&gt;(ChromeDriver.java:123)
-	at Stepdef.Popbitch.POPSMO11_Axate_lets_user_select_their_country.i_am_a_user_of_Axate_and_I_am_on_the_registration_page_through_popbitch_FUN(POPSMO11_Axate_lets_user_select_their_country.java:75)
+	at Stepdef.Popbitch.POPSMO10_Popbitch_Sucessful_user_registration_with_an_empty_wallet_on_skipping_payment.i_am_a_user_of_Axate_and_I_am_on_the_registration_page_through_popbitch_FUN(POPSMO10_Popbitch_Sucessful_user_registration_with_an_empty_wallet_on_skipping_payment.java:77)
 ... Removed 25 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">Stepdef.Popbitch.POPSMO11_Axate_lets_user_select_their_country#i_select_country_as_spain_from_the_drop_down_on_reg_page_two</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
-	at Elements.Register_Page_Elements1.select_country_spain(Register_Page_Elements1.java:143)
-	at Stepdef.Popbitch.POPSMO11_Axate_lets_user_select_their_country.i_select_country_as_spain_from_the_drop_down_on_reg_page_two(POPSMO11_Axate_lets_user_select_their_country.java:125)
+<h3 id="m2">Stepdef.Popbitch.POPSMO10_Popbitch_Sucessful_user_registration_with_an_empty_wallet_on_skipping_payment#i_get_an_unfunded_axate_wallet_with_zero_pounds_in_it</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
+	at java.util.Objects.requireNonNull(Objects.java:203)
+	at org.openqa.selenium.support.ui.FluentWait.&lt;init&gt;(FluentWait.java:106)
+	at org.openqa.selenium.support.ui.WebDriverWait.&lt;init&gt;(WebDriverWait.java:85)
+	at org.openqa.selenium.support.ui.WebDriverWait.&lt;init&gt;(WebDriverWait.java:45)
+	at Elements.Wallet_Elements.Click_On_popbitch_staging_agate_poster(Wallet_Elements.java:36)
+	at Stepdef.Popbitch.POPSMO10_Popbitch_Sucessful_user_registration_with_an_empty_wallet_on_skipping_payment.i_get_an_unfunded_axate_wallet_with_zero_pounds_in_it(POPSMO10_Popbitch_Sucessful_user_registration_with_an_empty_wallet_on_skipping_payment.java:125)
 ... Removed 25 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">Stepdef.Popbitch.POPSMO11_Axate_lets_user_select_their_country#i_click_on_one_pound_on_regpage_two</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">Stepdef.Popbitch.POPSMO11_Axate_lets_user_select_their_country#i_enter_all_the_required_details_on_step_one_and_click_on_continue</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">Stepdef.Popbitch.POPSMO10_Popbitch_Sucessful_user_registration_with_an_empty_wallet_on_skipping_payment#i_skip_the_payment_and_navigating_to_a_premium_article_on_popbitch</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
+	at java.util.Objects.requireNonNull(Objects.java:203)
+	at org.openqa.selenium.support.ui.FluentWait.&lt;init&gt;(FluentWait.java:106)
+	at org.openqa.selenium.support.ui.WebDriverWait.&lt;init&gt;(WebDriverWait.java:85)
+	at org.openqa.selenium.support.ui.WebDriverWait.&lt;init&gt;(WebDriverWait.java:45)
+	at Stepdef.Popbitch.POPSMO10_Popbitch_Sucessful_user_registration_with_an_empty_wallet_on_skipping_payment.i_skip_the_payment_and_navigating_to_a_premium_article_on_popbitch(POPSMO10_Popbitch_Sucessful_user_registration_with_an_empty_wallet_on_skipping_payment.java:110)
+... Removed 25 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">Stepdef.Popbitch.POPSMO10_Popbitch_Sucessful_user_registration_with_an_empty_wallet_on_skipping_payment#i_enter_all_the_required_details_on_step_one_and_click_on_continue</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
